[tool.poetry]
name = "thumbnailer"
version = "1.0.0"
description = ""
authors = ["Edward Q. Bridges <github@eqbridges.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^7.1.2"
python-magic = "^0.4.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
lgw = "^1.0.9"
boto3 = "^1.13.2"
pre-commit = "^2.3.0"
commitizen = "^1.22.3"

[tool.poetry.dev-dependencies.black]
version = "^19.3b0"
allow-prereleases = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version","version.txt"]
changelog_file = "CHANGELOG.md"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

